--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
 \usepackage{xfrac}
 
 \newcommand{\motionsnamn}{Totalreform av styrdokument}
-\newcommand{\motionar}{Intresseklubben för konstitutionella frågor}
+\newcommand{\motionar}{Medlemmar insamlade som ämnar revidera allt (MISÄRA)}
 
 \newlist{beslut}{itemize}{1}
 \setlist[beslut]{label=\textbf{att}}
