--- a/main.tex
+++ b/main.tex
@@ -43,7 +43,7 @@
 \textsc{\Huge Motion om}\\[0.5cm]
 \textsc{\huge \motionsnamn}\\[0.5cm]
 \textsc{\large \motionar\\}
-Ruben Seyer (ordf.),
+Ruben Seyer (föred.),
 Felix Augustsson,
 Erik Broback,
 Alexandru Golic,
@@ -63,10 +63,11 @@ En sammanfattning av de väsentliga ändringarna jämfört med tidigare dokument
     \item Före detta särskild ledamot erhåller rösträtt (och ska likställas med ordinarie medlem).
     \item Inspektor omfattas nu av offentlighetsprincipen.
     \item SAMO stryks helt från stadga (och kvarstår som post i styrelsen enligt reglemente).
-    \item Praxis kodifieras angående avsägelser och entlediganden.
+    \item Praxis kodifieras angående frågor om mandat, t.ex. avsägelser och entlediganden.
     \item Bestämmelser om misstroendeförklaring förtydligas, men ska i allt materiellt tolkas lika.
-    \item 
+    \item En långtgående elimination av redudans i definitionen av organen, särskilt mellan stadga och reglemente.
     \item TODO
+    \item En konsolidation av bestämmelser om ekonomi för sektionen och dess organ.
 \end{itemize}    
 
 \section*{Yrkanden}
@@ -512,7 +513,7 @@ Härigenom föreskrivs i fråga om stadgans kapitel 3 att kapitlet i sin helhet 
   \switchcolumn
   \setcounter{enumi}{0}
     
-    \item Sektionens inspektor \emph{ska} vara fysik- eller matematikprofessor vid institutionen för fysik eller institutionen för matematiska vetenskaper och tillvarata F- och TM-teknologens intressen, samt fungera som en länk mellan teknologer och anställda.
+    \item Sektionens inspektor \emph{ska} vara professor vid institutionen för fysik eller institutionen för matematiska vetenskaper och tillvarata F- och TM-teknologens intressen, samt fungera som en länk mellan teknologer och anställda.
 	
 	\item Sektionens inspektor väljs på två på varandra följande sektionsmöten med minst \sfrac{2}{3} majoritet, för mandat på tre år. 
 	
@@ -598,13 +599,16 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 4.1
 
     \item[] (se \S 8.1.6, \S 9.3.1, \S 10.3.1, \S 11.3.1, \S 12.5)
 
+    \item[] (se \S 8.4.6, \S 9.3.2, \S 12.5.2)
+
   \switchcolumn
     \item \emph{Alla organ} äger rätt att i namn och emblem använda sektionens namn och dess symboler.
       \label{4.1:emblem}
 
     \item \emph{Alla organ} är skyldiga att rätta sig efter sektionens stadgar, reglemente\emph{, beslut} samt övriga styrdokument.
       \label{4.1:rätta}
-
+      
+    \item \emph{Alla organ ska ha representation vid sektionsmötet.} \label{4.1:rep}
 \end{lydelse}
 
 \subsection{Mandat}
@@ -683,8 +687,7 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 4.2
     \item[] %Dragos är sektionens högste beskyddare och utövar fanfareriets högsta
     %  befäl.
     \emph{(ersätts av \S\ref{1.3:beskyddare})}
-     
-    
+
     \item Sektionsmötet har till sitt förfogande \emph{alla sektionens organ, undantaget intresseföreningar}.
     
     \item \emph{Sektionsstyrelsen har till sitt förfogande studienämnden, kommittéer, sektionsföreningar och funktionärer, inom deras respektive verksamhetsområden}.
@@ -784,10 +787,10 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 4.3
     \item \emph{Om talmanspresidiet i sin helhet entledigas genom misstroendeförklaring sker utlysning av och kallelse till extra sektionsmöte där fyllnadsval äger rum av sektionsordförande.
     Sektionsmötet väljer ett temporärt presidium för mötet.}
 
-    \item \emph{Om talmannen entledigas genom misstroendeförklaring tar vice talman över som tillfördordnad sådan tills ny talman är vald.}
+    \item \emph{Om talmannen entledigas genom misstroendeförklaring tar vice talman över som tillförordnad sådan tills ny talman är vald.}
       
     \subsubsection*{Ekonomiskt ansvarig}
-    \item Om ekonomisk ansvarig \emph{entledigas} genom misstroende\emph{förklaring} beslutar \emph{sektionsmötet} om \emph{bokslutet enligt \S\ref{4.2:enteko}} upprättas av avgående eller nyvald kassör.
+    \item Om ekonomiskt ansvarig \emph{entledigas} genom misstroende\emph{förklaring} beslutar \emph{sektionsmötet} om \emph{bokslutet enligt \S\ref{4.2:enteko}} upprättas av avgående eller nyvald kassör.
 
     \item Den nyvalda kassören \emph{kan} ej hållas ansvarig för brister i denna ekonomiska redovisning.
 
@@ -809,7 +812,7 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 5.1
     \item[] ---
   \switchcolumn
   \setcounter{subsection}{0}
-    \item Sektionsmötet är sektionsens högsta beslutande organ, i vilket samtliga medlemmar äger rätt att delta.
+    \item Sektionsmötet är sektionens högsta beslutande organ, i vilket samtliga medlemmar äger rätt att delta.
 
     \item \emph{Fråga av större principiell betydelse ska avgöras av sektionsmötet.}
 
@@ -817,17 +820,169 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 5.1
 \end{lydelse}
 
 \setcounter{subsection}{0}
-\subsection{Sammanträden}
+\subsection{Åligganden}
 Syftet är rent redaktionellt.
 
-Härigenom föreskrivs i fråga om stadgans avsnitt 5.2
+Härigenom föreskrivs i fråga om stadgans avsnitt 5.4
 \begin{dels}
     \item att avsnittet omnumreras till 5.1,
     \item att avsnittet i sin helhet ska ha följande lydelse.
 \end{dels}
 
 
-   % TODO: rättigheter, hänvisa också till kapitel 2 och 3.
+% TODO: rättigheter, hänvisa också till kapitel 2 och 3.
+% GLÖM inte välja valberedning, vice sektionsordförande. kan kollapsa läsperioder
+
+\section{Sektionsstyrelsen}
+Syftet är rent redaktionellt.
+
+Härigenom föreskrivs i fråga om stadgans kapitel 7
+\begin{dels}
+  \item att kapitlet omnumreras till 6,
+  \item att kapitlet i sin helhet, inklusive avsnitt, ska ha följande lydelse.
+\end{dels}
+
+\begin{lydelse}
+  \setcounter{section}{7}
+  \setcounter{subsection}{1}
+  \item Sektionsstyrelsen handhar i överensstämmelse med denna stadga, befintligt reglemente samt beslut tagna av sektionsmötet den verkställande ledningen av sektionens verksamhet. Sektionsstyrelsen är sektionsmötets ställföreträdare.
+
+  \setcounter{subsection}{3}
+  \setcounter{enumi}{0}
+  \item Sektionsstyrelsen ansvarar inför sektionsmötet för sektionens verksamhet och sektionens ekonomi.
+
+\switchcolumn
+  \item \emph{Sektionsstyrelsen handhar den verkställande ledningen av sektionens verksamhet och ansvar för sektionens ekonomi}.
+\end{lydelse}
+\setcounter{section}{6}
+\setcounter{subsection}{0}
+
+\subsection{Sammansättning}
+\begin{lydelse}
+  \setcounter{section}{7}
+  \setcounter{subsection}{2}
+  \item Sektionsstyrelsen består av sektionsordförande, vice sektionsordförande, sektionskassör samt övriga ledamöter enligt reglemente.
+
+  \setcounter{subsection}{9}
+  \item Sektionsordförande utövar i brådskande fall sektionsstyrelsens befogenheter. Ordförandebeslut skall prövas på följande styrelsemöte.
+
+  \item I ordförandes frånvaro utövar vice sektionsordförande dennes befogenheter och fullgör dennes plikter.
+\switchcolumn
+  \item Sektionsstyrelsen består av sektionsordförande, vice sektionsordförande, sektionskassör samt övriga ledamöter enligt reglemente.
+
+  \item Sektionsordförande utövar i \emph{nödfall} sektionsstyrelsens befogenheter.
+    Ordförandebeslut \emph{ska fastställas snarast av sektionsstyrelsen}.
+
+  \item \emph{Vice sektionsordförande övertar i sektionsordförandes frånvaro} dennes befogenheter och plikter.
+\end{lydelse}
+\setcounter{section}{6}
+\setcounter{subsection}{1}
+
+\subsection{Styrelsemöte}
+\begin{lydelse}
+  \setcounter{section}{7}
+  \setcounter{subsection}{5}
+  \item Sektionsstyrelsen sammanträder minst tre gånger per läsperiod.
+  \item Sektionsstyrelsen sammanträder på kallelse av sektionsordförande.
+  \setcounter{subsection}{6}
+  \setcounter{enumi}{0}
+  \item Sektionsstyrelsen är beslutsmässigt om sektionsordförande eller vice sektionsordförande och sammanlagt mer än hälften av sektionsstyrelsens ledamöter är närvarande.
+  \setcounter{subsection}{8}
+  \setcounter{enumi}{0}
+  \item Protokoll skall föras vid styrelsemöte, justeras av två
+    styrelseledamöter och anslås senast två läsveckor efter mötet.
+  \switchcolumn  
+
+  \item Sektionsstyrelsen sammanträder minst tre gånger per läsperiod på kallelse av sektionsordförande.
+  \item Sektionsstyrelsen är \emph{beslutsför} om \emph{mer än hälften av sektionsstyrelsens ledamöter är närvarande inklusive sektionsordförande eller vice sektionsordförande}.
+  \item Protokoll förs vid styrelsemöte, justeras av två styrelseledamöter och anslås senast två läsveckor efter mötet.
+\end{lydelse}
+\setcounter{section}{6}
+\setcounter{subsection}{2}
+
+\subsection{Överklagande}
+\begin{lydelse}
+  \setcounter{section}{7}
+  \setcounter{subsection}{7}
+\item Beslut av sektionsstyrelsen som strider mot kårens eller sektionens stadga, reglemente och/eller policy får undanröjas av kårfullmäktige. Sådant beslut skall tas upp till prövning om det begärs av en kårmedlem då det rör kårens stadga, eller sektionsmedlem då det rör sektionens stadga.
+
+  \switchcolumn
+\item Beslut av sektionsstyrelsen som strider mot kårens eller sektionens stadga, reglemente och/eller policy får undanröjas av kårfullmäktige. Sådant beslut skall tas upp till prövning om det begärs av en kårmedlem då det rör kårens stadga, eller sektionsmedlem då det rör sektionens stadga.
+
+\end{lydelse}
+\setcounter{section}{6}
+\setcounter{subsection}{3}
+
+\section{Studienämnden}
+Syftet är redaktionellt samt elimination av redundans.
+
+Härigenom föreskrivs i fråga om stadgans kapitel 8
+\begin{dels}
+\item att kapitlet omnumreras till 7,
+\item att kapitlet i sin helhet, inklusive avsnitt, ska ha följande lydelse.
+\end{dels}
+
+\begin{lydelse}
+  \setcounter{section}{8}
+  \setcounter{subsection}{1}
+  \item Studienämnden vid Fysikteknologsektionen, även kallad SNF, har till uppgift att inom sektionen övervaka tillståndet och utvecklingen beträffande studiefrågor, aktivt verka för god kurslitteratur, främja kontakten med lärarna samt hålla god kontakt med sektionens medlemmar och styrelse.
+
+\switchcolumn
+  \setcounter{section}{7}
+  \item Studienämnden \emph{(SNF)} har till uppgift att inom sektionen övervaka tillståndet och utvecklingen beträffande studiefrågor, aktivt verka för god kurslitteratur samt främja kontakten med lärarna.
+\end{lydelse}
+\setcounter{section}{7}
+\setcounter{subsection}{0}
+
+\subsection{Sammansättning}
+\begin{lydelse}
+  \setcounter{section}{8}
+  \setcounter{subsection}{2}
+  \item Studienämnden består av studienämndsordförande, studienämndskassör och medlemmar enligt reglemente angående studienämnden.
+\switchcolumn
+  \setcounter{section}{7}
+  \setcounter{subsection}{1}
+  \item Studienämnden består av studienämndsordförande, studienämndskassör och övriga \emph{ledamöter} enligt reglemente.
+\end{lydelse}
+\setcounter{section}{7}
+\setcounter{subsection}{1}
+
+\subsection{Studienämndsmöte}
+\begin{lydelse}
+  \setcounter{section}{8}
+  \setcounter{subsection}{4}
+  \item[] ---
+  \item Medlem i studienämnden har närvaro-, yttrande-, förslags- och rösträtt på studienämndsmöte.
+  \item Sektionsmedlem har närvaro-, yttrande- och förslagsrätt på studienämndsmöte.
+  \setcounter{subsection}{3}
+  \setcounter{enumi}{0}   
+  \item Protokoll skall föras vid studienämndsmöte, justeras av en studienämndsledamot och anslås senast två läsveckor efter mötet.
+  \switchcolumn
+  \setcounter{section}{7}
+  \setcounter{subsection}{2}
+  \item \emph{Studienämnden sammanträder minst tre gånger per läsperiod på kallelse av studienämndsordförande.}
+  \item \emph{Alla medlemmar äger} närvaro-, yttrande- och förslagsrätt på studienämndsmöte.
+  \item \emph{Endast studienämndens ledamöter äger dessutom rösträtt på studienämndsmöte.}
+  \item Protokoll \emph{förs} vid studienämndsmöte, justeras av en studienämndsledamot och anslås senast två läsveckor efter mötet.
+\end{lydelse}
+\setcounter{section}{7}
+\setcounter{subsection}{2}
+
+
+%\section{Ekonomi och revision}
+
+% org nr
+
+% firma teckn
+% \item Sektionsordförande \emph{och} sektionskassör tecknar sektionens firma var för sig.
+
+% \subsection{Redovisning}
+% ansvar från SS
+% budget
+% bokslut
+
+% \subsection{Revisor}
+% \subsection{Ansvarsfrihet}
 
 \clearpage
 \part{Reglemente}
