Kommittéer--Intresseföreningar minus ekonomi

--- a/main.tex
+++ b/main.tex
@@ -62,7 +62,7 @@ En sammanfattning av de väsentliga ändringarna jämfört med tidigare dokument
 \begin{itemize}
     \item Före detta särskild ledamot erhåller rösträtt (och ska likställas med ordinarie medlem).
     \item Inspektor omfattas nu av offentlighetsprincipen.
-    \item SAMO stryks helt från stadga (och kvarstår som post i styrelsen enligt reglemente).
+    \item Sektionsordförande och SAMO är ej längre separata organ.
     \item Praxis kodifieras angående frågor om mandat, t.ex. avsägelser och entlediganden.
     \item Bestämmelser om misstroendeförklaring förtydligas, men ska i allt materiellt tolkas lika.
     \item En långtgående elimination av redudans i definitionen av organen, särskilt mellan stadga och reglemente.
@@ -177,7 +177,7 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 2.1 och 2.4
   \switchcolumn*
     (\S 2.2.5, \S 2.8.2)
   \switchcolumn
-    \item Medlem \emph{äger} rätt att ta del av mötesprotokoll och sektionens övriga handlingar, undantaget de dokument som listas som icke offentliga i reglementet.
+    \item Medlem \emph{äger} rätt att ta del av mötesprotokoll och sektionens övriga handlingar, undantaget de dokument som listas som icke offentliga i reglemente.
       \label{2.1:offentlighet}
     
   \switchcolumn*
@@ -285,7 +285,7 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 2.5
     
 \switchcolumn
     \setcounter{subsection}{3}
-    \item Sektionens hedersmedlemmar \emph{förtecknas} i reglementet.
+    \item Sektionens hedersmedlemmar \emph{förtecknas} i reglemente.
     
     \item Till hedersmedlem kan kallas nu levande person som främjat F- eller TM-tekno\-loger, sektionen, ämnesområdet fysik eller matematik\emph{;} eller på annat sätt till\-för\-skansat sig F- eller TM-tekno\-logens vördnad och respekt.
     
@@ -469,7 +469,7 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 2.8
    
    \itemb Särskild ledamot är valbar till post inom sektionen.
 
-   \itemb Särskild ledamot har rätt att ta del av mötesprotokoll och sektionens övriga handlingar, undantaget de dokument som listas som icke offentliga i reglementet.
+   \itemb Särskild ledamot har rätt att ta del av mötesprotokoll och sektionens övriga handlingar, undantaget de dokument som listas som icke offentliga i reglemente.
    
    \itemb Särskild ledamot har rätt att utnyttja av sektionen erbjudna tjänster.
     
@@ -526,13 +526,13 @@ Härigenom föreskrivs i fråga om stadgans kapitel 3 att kapitlet i sin helhet 
 
     \item Inspektor \emph{äger} närvaro-, yttrande- och förslagsrätt vid sammanträde i sektionens samtliga organ.
     
-    \item \emph{Inspektor äger rätt att ta del av mötesprotokoll och sektionens övriga handlingar, undantaget de dokument som listas som icke offentliga i reglementet.}
+    \item \emph{Inspektor äger rätt att ta del av mötesprotokoll och sektionens övriga handlingar, undantaget de dokument som listas som icke offentliga i reglemente.}
 \end{lydelse}
 
 \section{Organisation och ansvar}
 \subsection{Verksamhetsutövning}
 Syftet är att förnya språket och konsolidera verksamhetsgemensamma bestämmelser.
-Studerandearbetsmiljöombud är inte längre ett separat organ inom sektionen.
+Sektionsordförande och studerandearbetsmiljöombud är ej längre ett separata organ inom sektionen.
 
 Härigenom föreskrivs i fråga om stadgans avsnitt 4.1
 \begin{dels}
@@ -565,16 +565,16 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 4.1
    tillhörande reglemente föreskriver genom \emph{följande organ}:
       \begin{itemize}
        \item Sektionsmötet
-       \item Talmanspresidiet
-       \item Valberedningen
-       \item Revisorer
        \item Sektionsstyrelsen
-       \item Sektionsordföranden
+       %\item Sektionsordföranden
        \item Studienämnden
        \item Kommittéer
        \item Sektionsföreningar
        \item Funktionärer
        \item Intresseföreningar
+       \item Talmanspresidiet
+       \item Valberedningen
+       \item Revisorer
       \end{itemize}
     
   \switchcolumn*
@@ -608,7 +608,7 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 4.1
     \item \emph{Alla organ} är skyldiga att rätta sig efter sektionens stadgar, reglemente\emph{, beslut} samt övriga styrdokument.
       \label{4.1:rätta}
       
-    \item \emph{Alla organ ska ha representation vid sektionsmötet.} \label{4.1:rep}
+    \item \emph{Alla organ, med undantag för funktionärer, ska ha representation vid sektionsmötet.} \label{4.1:rep}
 \end{lydelse}
 
 \subsection{Mandat}
@@ -618,6 +618,7 @@ Dessutom kodifieras praxis om entlediganden.
 Härigenom förskrivs i fråga om stadgan
 \begin{dels}
     \item att ett nytt avsnitt 4.2 införs,
+    \item att rubriken för avsnittet ska lyda ''Mandat'',
     \item att avsnittet i sin helhet ska ha följande lydelse.
 \end{dels}
 
@@ -628,17 +629,19 @@ Härigenom förskrivs i fråga om stadgan
     \item Sektionsaktiv är person vald till post av sektionsmötet eller sektionsstyrelsen.
       \label{4.x:aktiv}
   
-    \item Förtroendeposter \emph{förtecknas} i reglementet.
+    \item Förtroendeposter \emph{förtecknas} i \emph{stadga eller} reglemente.
     \emph{Förtroendevald är person vald till förtroendepost.}
       \label{4.x:fortroende}
 
-    \item \emph{Ekonomiskt ansvariga förtroendevalda förtecknas i reglementet.}
+    \item \emph{Ekonomiskt ansvariga förtecknas i stadga eller reglemente.}
+
+    \item \emph{Ekonomiskt ansvarig ska vara förtroendevald och myndig.}
 
   \switchcolumn*
-    (se \S 5.13.1)
+    (se \S 5.13.1, \S 9.1.3)
   \switchcolumn
     \subsubsection*{Tillsättande}
-    \item \emph{Post i sektionens organ tillsätts i vanliga fall genom personval på sektionsmöte.}
+    \item \emph{Post i sektionens organ tillsätts i vanliga fall genom personval på sektionsmöte.} \label{4.x:tillsätt}
 
     \item Vid \emph{vakans kan} sektionsstyrelsen preliminärt tillsätta posten.
     \emph{Beslutet fastställs} på nästkommande sektionsmöte.
@@ -796,6 +799,25 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 4.3
 
 \end{lydelse}
 
+\subsection{Överklagan}
+Syftet är att konsolidera bestämmelser om överklagan från övriga kapitel till ett enda ställe.
+
+Härigenom föreskrivs i fråga om stadgan
+\begin{dels}
+  \item att ett nytt avsnitt 4.5 införs,
+  \item att avsnittets rubrik ska lyda ''Överklagan'',
+  \item att avsnittet i sin helhet ska ha följande lydelse.
+\end{dels}
+
+\begin{lydelse}
+  \item[] (se \S 5.10.1, \S 7.7.1)
+  
+  \switchcolumn
+  \item \emph{Beslut av sektionsmötet eller sektionsstyrelsen som strider mot kårens eller sektionens stadga, reglemente, beslut eller övriga styrdokument får undanröjas efter överklagan.}
+  \item \emph{Överklagan gällande kårens styrdokument framställs av kårmedlem till kårfullmäktige.}
+  \item \emph{Överklagan gällande sektionens styrdokument framställs av sektionsmedlem till kårfullmäktige, och om det gäller sektionsstyrelsebeslut även sektionsmötet.}
+\end{lydelse}
+
 \section{Sektionsmötet}
 Syftet är redaktionellt, samt att uppdatera bestämmelser i enlighet med övriga förändringar.
 
@@ -834,7 +856,9 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 5.4
 % GLÖM inte välja valberedning, vice sektionsordförande. kan kollapsa läsperioder
 
 \section{Sektionsstyrelsen}
-Syftet är rent redaktionellt.
+Syftet är redaktionellt.
+Många tidigare bestämmelser har införlivats i övriga kapitel.
+Definitionen av förtroendeposter lyfts från reglemente.
 
 Härigenom föreskrivs i fråga om stadgans kapitel 7
 \begin{dels}
@@ -851,14 +875,6 @@ Härigenom föreskrivs i fråga om stadgans kapitel 7
   \setcounter{enumi}{0}
   \item Sektionsstyrelsen ansvarar inför sektionsmötet för sektionens verksamhet och sektionens ekonomi.
 
-\switchcolumn
-  \item \emph{Sektionsstyrelsen handhar den verkställande ledningen av sektionens verksamhet och ansvar för sektionens ekonomi}.
-\end{lydelse}
-\setcounter{section}{6}
-\setcounter{subsection}{0}
-
-\subsection{Sammansättning}
-\begin{lydelse}
   \setcounter{section}{7}
   \setcounter{subsection}{2}
   \item Sektionsstyrelsen består av sektionsordförande, vice sektionsordförande, sektionskassör samt övriga ledamöter enligt reglemente.
@@ -868,15 +884,27 @@ Härigenom föreskrivs i fråga om stadgans kapitel 7
 
   \item I ordförandes frånvaro utövar vice sektionsordförande dennes befogenheter och fullgör dennes plikter.
 \switchcolumn
+  \item \emph{Sektionsstyrelsen handhar den verkställande ledningen av sektionens verksamhet och ansvar för sektionens ekonomi}.
+
   \item Sektionsstyrelsen består av sektionsordförande, vice sektionsordförande, sektionskassör samt övriga ledamöter enligt reglemente.
+    \emph{Samtliga är förtroendeposter.}
 
   \item Sektionsordförande utövar i \emph{nödfall} sektionsstyrelsens befogenheter.
     Ordförandebeslut \emph{ska fastställas snarast av sektionsstyrelsen}.
 
   \item \emph{Vice sektionsordförande övertar i sektionsordförandes frånvaro} dennes befogenheter och plikter.
+
+  \item \emph{Sektionsordförande och sektionskassör är ekonomiskt ansvariga.}
 \end{lydelse}
 \setcounter{section}{6}
-\setcounter{subsection}{1}
+\setcounter{subsection}{0}
+
+%\subsection{Sammansättning}
+%\begin{lydelse}
+%\switchcolumn
+%\end{lydelse}
+%\setcounter{section}{6}
+%\setcounter{subsection}{1}
 
 \subsection{Styrelsemöte}
 \begin{lydelse}
@@ -900,21 +928,9 @@ Härigenom föreskrivs i fråga om stadgans kapitel 7
 \setcounter{section}{6}
 \setcounter{subsection}{2}
 
-\subsection{Överklagande}
-\begin{lydelse}
-  \setcounter{section}{7}
-  \setcounter{subsection}{7}
-\item Beslut av sektionsstyrelsen som strider mot kårens eller sektionens stadga, reglemente och/eller policy får undanröjas av kårfullmäktige. Sådant beslut skall tas upp till prövning om det begärs av en kårmedlem då det rör kårens stadga, eller sektionsmedlem då det rör sektionens stadga.
-
-  \switchcolumn
-\item Beslut av sektionsstyrelsen som strider mot kårens eller sektionens stadga, reglemente och/eller policy får undanröjas av kårfullmäktige. Sådant beslut skall tas upp till prövning om det begärs av en kårmedlem då det rör kårens stadga, eller sektionsmedlem då det rör sektionens stadga.
-
-\end{lydelse}
-\setcounter{section}{6}
-\setcounter{subsection}{3}
-
 \section{Studienämnden}
-Syftet är redaktionellt samt elimination av redundans.
+Syftet är detsamma som för föregående kapitel.
+Dessutom förtydligas rättigheterna angående studienämndsmöte.
 
 Härigenom föreskrivs i fråga om stadgans kapitel 8
 \begin{dels}
@@ -927,25 +943,21 @@ Härigenom föreskrivs i fråga om stadgans kapitel 8
   \setcounter{subsection}{1}
   \item Studienämnden vid Fysikteknologsektionen, även kallad SNF, har till uppgift att inom sektionen övervaka tillståndet och utvecklingen beträffande studiefrågor, aktivt verka för god kurslitteratur, främja kontakten med lärarna samt hålla god kontakt med sektionens medlemmar och styrelse.
 
-\switchcolumn
-  \setcounter{section}{7}
-  \item Studienämnden \emph{(SNF)} har till uppgift att inom sektionen övervaka tillståndet och utvecklingen beträffande studiefrågor, aktivt verka för god kurslitteratur samt främja kontakten med lärarna.
-\end{lydelse}
-\setcounter{section}{7}
-\setcounter{subsection}{0}
-
-\subsection{Sammansättning}
-\begin{lydelse}
   \setcounter{section}{8}
   \setcounter{subsection}{2}
   \item Studienämnden består av studienämndsordförande, studienämndskassör och medlemmar enligt reglemente angående studienämnden.
 \switchcolumn
   \setcounter{section}{7}
-  \setcounter{subsection}{1}
+  \item Studienämnden \emph{(SNF)} har till uppgift att inom sektionen övervaka tillståndet och utvecklingen beträffande studiefrågor, aktivt verka för god kurslitteratur samt främja kontakten med lärarna.
+  
   \item Studienämnden består av studienämndsordförande, studienämndskassör och övriga \emph{ledamöter} enligt reglemente.
+
+  \item \emph{Studienämndsordförande och studienämndskassör är förtroendeposter och ekonomiskt ansvariga.}
 \end{lydelse}
 \setcounter{section}{7}
-\setcounter{subsection}{1}
+\setcounter{subsection}{0}
+
+%\subsection{Sammansättning}
 
 \subsection{Studienämndsmöte}
 \begin{lydelse}
@@ -959,7 +971,7 @@ Härigenom föreskrivs i fråga om stadgans kapitel 8
   \item Protokoll skall föras vid studienämndsmöte, justeras av en studienämndsledamot och anslås senast två läsveckor efter mötet.
   \switchcolumn
   \setcounter{section}{7}
-  \setcounter{subsection}{2}
+  \setcounter{subsection}{1}
   \item \emph{Studienämnden sammanträder minst tre gånger per läsperiod på kallelse av studienämndsordförande.}
   \item \emph{Alla medlemmar äger} närvaro-, yttrande- och förslagsrätt på studienämndsmöte.
   \item \emph{Endast studienämndens ledamöter äger dessutom rösträtt på studienämndsmöte.}
@@ -968,6 +980,141 @@ Härigenom föreskrivs i fråga om stadgans kapitel 8
 \setcounter{section}{7}
 \setcounter{subsection}{2}
 
+\section{Kommittéer}
+Syftet är redaktionellt.
+Alla avsnitt utöver definitionen har införlivats i övriga kapitel.
+Definitionen av förtroendeposter lyfts från reglemente.
+
+Härigenom föreskrivs i fråga om stadgans kapitel 9
+\begin{dels}
+\item att kapitlet omnumreras till 8,
+\item att kapitlet i sin helhet ska ha följande lydelse.
+\end{dels}
+
+\begin{lydelse}
+\setcounter{section}{9}
+\setcounter{subsection}{1}
+  \item Sektionskommitté på sektionen skall ha ett i reglemente fastställt antal förtroendeposter.
+  \item Sektionskommitté på sektionen kan ha ett i reglementet fastställt antal övriga medlemmar.
+  \item Förtroendeposter tillsätts av sektionsmötet på förslag av valberedningen.
+  \item Övriga medlemmar fastslås i enlighet med reglementet.
+  \item Sektionskommitté skall verka för sektionens bästa och ha en i reglementet fastslagen uppgift.
+\switchcolumn
+  \setcounter{section}{8}
+  \item \emph{Kommitté verkar för att uppfylla sektionens ändamål och ska vara dess representanter.}
+  \item \emph{Kommitté fastställs och förtecknas i reglemente, med syfte, sammansättning och åligganden.}
+  \item \emph{Sammansättningen ska åtminstone innehålla ordförande och kassör, vilka är förtroendeposter och ekonomiskt ansvariga.}
+  \item[] \emph{(ersätts av \S\ref{4.x:tillsätt} och \S\ref{13.x:valBfp})}
+\end{lydelse}
+\setcounter{section}{8}
+
+\section{Sektionsföreningar}
+Syftet är redaktionellt.
+Alla avsnitt utöver definitionen har införlivats i övriga kapitel.
+
+Härigenom föreskrivs i fråga om stadgans kapitel 10
+\begin{dels}
+\item att kapitlet omnumreras till 9,
+\item att kapitlet i sin helhet ska ha följande lydelse.
+\end{dels}
+
+\begin{lydelse}
+\setcounter{section}{10}
+\setcounter{subsection}{1}
+  \item Sektionsförening på sektionen skall ha ett i reglemente fastställt antal förtroendeposter.
+  \item Övriga medlemmar tecknas i reglementet.
+  \item Medlemmar tillsätts enligt reglementet.
+  \item Sektionsförening skall verka för sektionens bästa och ha en i reglementet fastslagen uppgift.
+\switchcolumn
+  \setcounter{section}{9}
+  \item \emph{Sektionsförening verkar för att uppfylla sektionens ändamål.}
+  \item \emph{Sektionsförening fastställs och förtecknas i reglemente, med sammansättning och åligganden.}
+  \item[] \emph{(ersätts av \S\ref{4.x:tillsätt})}
+\end{lydelse}
+\setcounter{section}{9}
+
+\section{Funktionärer}
+Syftet är mestadels redaktionellt.
+Alla avsnitt utöver definitionen har införlivats i övriga kapitel.
+Stadgan öppnar för direkt tillsättning av funktionärer om reglemente så föreskriver (och gör dumvästen stadgeenlig!).
+
+Härigenom föreskrivs i fråga om stadgans kapitel 11
+\begin{dels}
+\item att kapitlet omnumreras till 10,
+\item att kapitlet i sin helhet ska ha följande lydelse.
+\end{dels}
+
+\begin{lydelse}
+  \setcounter{section}{11}
+  \setcounter{subsection}{1}
+\item Sektionsfunktionär på sektionen ska finnas enligt reglemente.
+\item Sektionsfunktionär tillsätts av sektionsmötet.
+\item Sektionsförening skall verka för sektionens bästa och ha en i reglementet fastslagen uppgift.
+\item Sektionsfunktionärer betraktas ej som förtroendevalda om ej annorlunda specificerats i regle-
+mentet.
+\switchcolumn
+\setcounter{section}{10}
+\item \emph{Funktionär verkar för att uppfylla sektionens ändamål genom enskild uppgift.}
+\item \emph{Funktionär fastställs och förtecknas i reglemente, med sammansättning och åligganden.}
+\item \emph{Om reglemente så föreskriver kan funktionär tillsättas på annat sätt än enligt \S\ref{4.x:tillsätt}.}
+\item[] \emph{(redundant)}
+\end{lydelse}
+\setcounter{section}{10}
+
+\section{Intresseföreningar}
+Syftet är rent redaktionellt.
+Många bestämmelser har införlivats i övriga kapitel.
+
+Härigenom föreskrivs i fråga om stadgans kapitel 12
+\begin{dels}
+\item att kapitlet omnumreras till 11,
+\item att kapitlet i sin helhet, inklusive avsnitt, ska ha följande lydelse.
+\end{dels}
+
+\begin{lydelse}
+  \setcounter{section}{12}
+  \setcounter{subsection}{1}
+  \item En intresseförening på sektionen är en sammanslutning av sektionsmedlemmar med ett gemensamt intresse.
+  \item Intresseföreningen skall verka för sektionens bästa och ha en i reglementet fastslagen uppgift.
+\switchcolumn
+  \setcounter{section}{11}
+  \item Intresseförening är en sammanslutning av sektionsmedlemmar med gemensamt intresse \emph{som verkar enligt sektionens ändamål}.
+\switchcolumn*
+  \setcounter{subsection}{3}
+  \setcounter{enumi}{0}
+  \item Intresseförenings status beviljas och fråntas av sektionsmötet.
+  
+  \setcounter{subsection}{8}
+  \setcounter{enumi}{0}
+  \item Sektionens intresseföreningar är listade i reglementet.
+\switchcolumn
+  \item Intresseföreningsstatus beviljas och fråntas av sektionsmötet.
+  \item Intresseförening \emph{förtecknas} i reglemente.
+\end{lydelse}
+\setcounter{section}{11}
+\setcounter{subsection}{0}
+
+\subsection{Krav}
+\begin{lydelse}
+  \setcounter{section}{12}
+  \setcounter{subsection}{2}
+  \item Intresseförening skall ha en av sektionsstyrelsen godkänd stadga.
+  \item Intresseförening skall ha en styrelse. Minst två tredjedelar av styrelsledamöterna skall vara sektionsmedlemmar.
+  \setcounter{subsection}{7}
+  \item Varje sektionsmedlem skall ha rätt till medlemskap. Dock kan föreningsmedlem som motverkar föreningens syfte uteslutas.
+  \item Styrelsen kan besluta om medlemskap för någon som ej är medlem i Fysikteknologsektionen så länge dylika medlemmar ej utgör mer än hälften av föreningens medlemmar.
+  \switchcolumn
+  \setcounter{section}{11}
+  \item Intresseförening \emph{ska} ha en av sektionsstyrelsen godkänd stadga.
+  \item Intresseförening \emph{ska} ha en styrelse \emph{bestående till minst \sfrac{2}{3} av} sektionsmedlemmar.
+  \item Varje sektionsmedlem \emph{ska äga} rätt till medlemskap i \emph{intresseförening}.
+    Dock \emph{får} medlem som motverkar \emph{intresse}föreningens syfte uteslutas.
+  \item \emph{Sektionsmedlemmar ska utgöra minst hälften av intresseförenings medlemmar.}
+\end{lydelse}
+\setcounter{section}{11}
+\setcounter{subsection}{1}
+
+\subsection{Ekonomi}
 
 %\section{Ekonomi och revision}
 
